--- a/Projet Web Commerce/Views/Evaluations/Index.cshtml
+++ b/Projet Web Commerce/Views/Evaluations/Index.cshtml
@@ -7,7 +7,16 @@
 @inject SignInManager<Utilisateur> SignInManager
 @inject UserManager<Utilisateur> UserManager
 
-@if (!SignInManager.IsSignedIn(User) || !User.IsInRole("Client"))
+<style>
+    .evaluation{
+        background-color: white;
+        padding: 5px;
+        margin-bottom: 10px;
+        border-radius: 5px
+    }
+</style>
+
+@if (!SignInManager.IsSignedIn(User) || !(User.IsInRole("Client") || User.IsInRole("Vendeur")))
 {
     Console.WriteLine("yes");
     <text>
@@ -27,10 +36,15 @@ else
     var rating = ViewBag.rating;
     int numRating = 0;
     bool trouve = false;
-    PPEvaluations evalClientActu = _context.PPEvaluations.Where(e=>e.NoClient==client.NoClient && e.NoProduit == id).FirstOrDefault();
+    PPEvaluations evalClientActu = null;
+
+    @if (User.IsInRole("Client"))
+    {
+       evalClientActu = _context.PPEvaluations.Where(e => e.NoClient == client.NoClient && e.NoProduit == id).FirstOrDefault();
+    }
 
 
-    if (evalClientActu != null)
+if (evalClientActu != null)
     {
         trouve = true;
     }
@@ -47,11 +61,12 @@ else
 
     <div class="row">
         <div class="col-md-4">
-            @if (trouve)
+            <h2>Évaluations pour <h2 style="font-style:italic">@_context.PPProduits.Where(p => p.NoProduit == id).FirstOrDefault().Nom</h2></h2>
+            @if (trouve && User.IsInRole("Client"))
             {
                 <h5>Modifier votre évaluation</h5>
             }
-            else
+            else if (User.IsInRole("Client"))
             {
                 <h5>Ajouter une évaluation</h5>
             }
@@ -61,13 +76,13 @@ else
                     <form asp-route-id="@id" id="eval" method="post">
                         @for (int i = 0; i < numRating; i++)
                         {
-                            <button type="submit" name="rating" value="@i" style="border: none">
+                            <button type="submit" name="rating" value="@i" style="border: 0; background-color:transparent">
                                 <img src="~/Logo/iconeEtoileJaune.png" width="25" height="25" />
                             </button>
                         }
                         @for (int i = numRating; i < 5; i++)
                         {
-                            <button type="submit" name="rating" value="@i" style="border: none">
+                            <button type="submit" name="rating" value="@i" style="border: 0; background-color:transparent">
                                 <img src="~/Logo/iconeEtoile.png" width="25" height="25" />
                             </button>
                         }
@@ -85,59 +100,69 @@ else
                             <button class="btn btn-secondary" style="background-color:#7C6992; color:#F9E547" type="submit">Ajouter une évaluation</button>
                         }
                     </form>
-                    <br style="border-top: 3px solid #bbb" />
+                    <hr style="border-top: 3px solid gray" />
                     <h3>Évaluations:</h3>
                 }
                 else
                 {
+                    <hr style="border-top: 3px solid gray" />
                     <h3>Vos évaluations:</h3>
                 }
-
                 @if (trouve)
                 {
                     int cote = (int)evalClientActu.Cote;
-                    <h6>
-                        @client.AdresseEmail 
-                        @for (int i = 0; i < cote; i++)
-                        {
-                            <button type="submit" name="rating" value="@i" style="border: none">
+                    <div class="evaluation">
+                        <h6>
+                            (Vous) @client.AdresseEmail
+                            @for (int i = 0; i < cote; i++)
+                            {
                                 <img src="~/Logo/iconeEtoileJaune.png" width="15" height="15" />
-                            </button>
-                        }
-                        @for (int i = cote; i < 5; i++)
-                        {
-                            <button type="submit" name="rating" value="@i" style="border: none">
+                            }
+                            @for (int i = cote; i < 5; i++)
+                            {
                                 <img src="~/Logo/iconeEtoile.png" width="15" height="15" />
-                            </button>
-                        } :
-                    </h6>
-                    if(evalClientActu.Commentaire != "" && evalClientActu.Commentaire != null)
-                    {
+                            } :
+                        </h6>
+                        @if(evalClientActu.Commentaire != "" && evalClientActu.Commentaire != null)
+                        {
                         <p>@evalClientActu.Commentaire</p>
-                    }
-                    else
-                    {
+                        }
+                        else
+                        {
                         <p style="color:gray">Aucune commentaire</p>
-                    }
+                        }
+                    </div>
                 }
                 
                 @if (lstReview.Count > 0)
                 {
-                    @foreach (var review in lstReview.Where(r => r.NoClient != client.NoClient && r.NoProduit == id))
+                    @foreach (var review in User.IsInRole("Client") ? lstReview.Where(r => r.NoClient != client.NoClient && r.NoProduit == id): lstReview)
                     {
                         var unClient = _context.PPClients.Where(c => c.NoClient == review.NoClient).FirstOrDefault();
 
                         int cote = (int)review.Cote;
 
-                        <h6>(Vous) @unClient.AdresseEmail (@cote étoiles) :</h6>
-                        if (review.Commentaire != "" && review.Commentaire != null)
-                        {
-                            <p>@review.Commentaire</p>
-                        }
-                        else
-                        {
-                            <p>Aucun commentaire</p>
-                        }
+                        <div class="evaluation">
+                            <h6>
+                                @unClient.AdresseEmail
+                                @for (int i = 0; i < cote; i++)
+                                {
+                                    <img src="~/Logo/iconeEtoileJaune.png" width="15" height="15" />
+                                }
+                                @for (int i = cote; i < 5; i++)
+                                {
+                                    <img src="~/Logo/iconeEtoile.png" width="15" height="15" />
+                                } :
+                            </h6>
+                            @if (review.Commentaire != "" && review.Commentaire != null)
+                            {
+                                <p>@review.Commentaire</p>
+                            }
+                            else
+                            {
+                                <p>Aucun commentaire</p>
+                            }
+                        </div>
                     }
                 }
                 else
