--- a/Projet Web Commerce/Views/Messagerie/Envoyes.cshtml
+++ b/Projet Web Commerce/Views/Messagerie/Envoyes.cshtml
@@ -30,6 +30,51 @@
         background-color: rgb(236, 235, 243);
         cursor: pointer;
     }
+
+    .menu-container {
+        display: block;
+        justify-content: space-between;
+        align-items: center;
+        padding-left: 30%;
+    }
+
+    .menu-btn {
+        border: none;
+        cursor: pointer;
+        text-decoration: none;
+        color: black;
+    }
+
+        .menu-btn:after {
+            content: '\2807';
+            font-size: 110%;
+        }
+
+    .menu-list {
+        list-style-type: none;
+        padding: 0;
+        margin: 0;
+        display: none;
+        position: absolute;
+        background-color: #444;
+        border-radius: 5px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    }
+
+        .menu-list li {
+            padding: 10px;
+        }
+
+            .menu-list li a {
+                text-decoration: none;
+                color: white;
+                display: block;
+            }
+
+                .menu-list li a:hover {
+                    text-decoration: underline;
+                    font-weight: bold;
+                }
 </style>
 
 <div class="row">
@@ -48,7 +93,8 @@
                                 <th scope="col">#</th>
                                 <th scope="col">Destinataire(s)</th>
                                 <th scope="col">Objet - <span class="msg">Message</span></th>
-                                <th scope="col" class="ms-auto">Date de l'envoi</th>
+                                <th scope="col" class="text-end">Date de l'envoi</th>
+                                <th scope="col"></th>
                             </tr>
                         </thead>
                         <tbody>
@@ -70,10 +116,18 @@
                                         }
                                         @dests
                                     </td>
-
                                     <td class="truncate">@Html.DisplayFor(modelItem => msg.Sujet) - <span class="msg">@Html.DisplayFor(modelItem => msg.Message)</span></td>
-                                    <td class="ms-auto">@DateTime.Now.Date</td>
-                                    @* <td>@msg.DateMessage.ToShortDateString()</td> *@
+                                    <td class="text-end">@msg.DateEnvoi</td>
+                                    <td>
+                                        <div class="menu-container">
+                                            <a class="menu-btn" onclick="afficherMenu(event)">@* ☰ *@</a>
+                                            <ul class="menu-list">
+                                                <li><a href="#" onclick="repondre(event, '@msg.NoMessage')">Répondre</a></li>
+                                                <li><a href="#" onclick="transferer(event, '@msg.NoMessage', '@ViewBag.UtilisateurCourantId')">Transférer</a></li>
+                                                <li><a href="#" onclick="supprimer(event, '@msg.NoMessage')">Supprimer</a></li>
+                                            </ul>
+                                        </div>
+                                    </td>
                                 </tr>
                             }
                         </tbody>
@@ -83,3 +137,41 @@
         </section>
     </div>
 </div>
+
+<script>
+    document.addEventListener('click', function (event) {
+        var menuList = document.querySelectorAll('.menu-list');
+
+        // Vérifier si l'élément cliqué n'est pas à l'intérieur du menu
+        if (!event.target.closest('.menu-container')) {
+            // Masquer tous les menus
+            menuList.forEach(function (menu) {
+                menu.style.display = 'none';
+            });
+        }
+    });
+
+    function afficherMenu(event) {
+        event.stopPropagation();
+        var menuList = event.target.nextElementSibling;
+        menuList.style.display = (menuList.style.display === 'none' || menuList.style.display === '') ? 'block' : 'none';
+    }
+
+    function repondre(event, noMessage) {
+        event.stopPropagation();
+        window.location.href = '@Url.Action("EnvoyerMessage")' + '?idMessage=' + noMessage + '&typeMessage=' + 'reponse';
+    }
+
+
+    function transferer(event, noMessage, transmetteur) {
+        event.stopPropagation();
+        window.location.href = '@Url.Action("EnvoyerMessage")' + '?idMessage=' + noMessage + '&typeMessage=' + 'transmission' + '&transmetteur=' + transmetteur;
+    }
+
+    function supprimer(event, noMessage) {
+        event.stopPropagation();
+
+        document.getElementById('idMessage').value = noMessage;
+        document.getElementById('frmCourriel').submit();
+    }
+</script>
