--- a/Projet Web Commerce/Views/Messagerie/Brouillons.cshtml
+++ b/Projet Web Commerce/Views/Messagerie/Brouillons.cshtml
@@ -58,7 +58,7 @@
                             @foreach (var msg in Model)
                             {
                                 var idDestinataires = msg.Destinataires.Select(d => d.Destinataire);
-                                <tr class="flotter" onclick="window.location.href = '@Url.Action("EnvoyerMessage", new { idMessage = msg.NoMessage })'">
+                                <tr class="flotter" onclick="window.location.href = '@Url.Action("EnvoyerMessage", new { idMessage = msg.NoMessage, typeMessage = "brouillon" })'">
                                     <td>@(++no)</td>
                                     <td class="truncateDest">
                                         @{
