--- a/Projet Web Commerce/Views/Evaluations/Index.cshtml
+++ b/Projet Web Commerce/Views/Evaluations/Index.cshtml
@@ -38,112 +38,84 @@ else
     bool trouve = false;
     PPEvaluations evalClientActu = null;
 
-    @if (User.IsInRole("Client"))
+    if (id != -1)
     {
-       evalClientActu = _context.PPEvaluations.Where(e => e.NoClient == client.NoClient && e.NoProduit == id).FirstOrDefault();
-    }
+        @if (User.IsInRole("Client"))
+        {
+            evalClientActu = _context.PPEvaluations.Where(e => e.NoClient == client.NoClient && e.NoProduit == id).FirstOrDefault();
+        }
 
 
-if (evalClientActu != null)
-    {
-        trouve = true;
-    }
+        if (evalClientActu != null)
+        {
+            trouve = true;
+        }
 
-    if (trouve)
-    {
-        numRating = (int)evalClientActu.Cote;
-    }
+        if (trouve)
+        {
+            numRating = (int)evalClientActu.Cote;
+        }
 
-    if (rating != null)
-    {
-        numRating = rating;
-    }
+        if (rating != null)
+        {
+            numRating = rating;
+        }
 
-    <div class="row">
-        <div class="col-md-4">
-            <h2>Évaluations pour 
-                <a asp-controller="PPProduits" asp-route-id="@id" asp-action="Details">
-                    <h2 style="font-style:italic">@_context.PPProduits.Where(p => p.NoProduit == id).FirstOrDefault().Nom</h2>
-                </a>
-            </h2>
-            @if (trouve && User.IsInRole("Client"))
-            {
-                <h5>Modifier votre évaluation</h5>
-            }
-            else if (User.IsInRole("Client"))
-            {
-                <h5>Ajouter une évaluation</h5>
-            }
-            <div class="col">
-                @if (User.IsInRole("Client"))
+        <div class="row">
+            <div class="col-md-4">
+                <h2>
+                    Évaluations pour
+                    <a asp-controller="PPProduits" asp-route-id="@id" asp-action="Details">
+                        <h2 style="font-style:italic">@_context.PPProduits.Where(p => p.NoProduit == id).FirstOrDefault().Nom</h2>
+                    </a>
+                </h2>
+                @if (trouve && User.IsInRole("Client"))
                 {
-                    <form asp-route-id="@id" id="eval" method="post">
-                        @for (int i = 0; i < numRating; i++)
-                        {
-                            <button type="submit" name="rating" value="@i" style="border: 0; background-color:transparent">
-                                <img src="~/Logo/iconeEtoileJaune.png" width="25" height="25" />
-                            </button>
-                        }
-                        @for (int i = numRating; i < 5; i++)
-                        {
-                            <button type="submit" name="rating" value="@i" style="border: 0; background-color:transparent">
-                                <img src="~/Logo/iconeEtoile.png" width="25" height="25" />
-                            </button>
-                        }
-                    </form>
-                    <br />
-                    <form asp-route-id="@id" asp-route-noClient="@client.NoClient" asp-route-eval="@trouve" asp-route-rating="@numRating" asp-action="Edit">
-                        @if (evalClientActu != null)
-                        {
-                            <textarea rows="4" cols="50" name="msg" placeholder="Modifier votre commentaire">@evalClientActu.Commentaire</textarea>
-                            <button class="btn btn-secondary" style="background-color:#7C6992; color:#F9E547" type="submit">Modifier votre évaluation</button>
-                        }
-                        else
-                        {
-                            <textarea rows="4" cols="50" name="msg" placeholder="Ajouter un commentaire"></textarea>
-                            <button class="btn btn-secondary" style="background-color:#7C6992; color:#F9E547" type="submit">Ajouter une évaluation</button>
-                        }
-                    </form>
+                    <h5>Modifier votre évaluation</h5>
                 }
-                <hr style="border-top: 3px solid gray" />
-                <h3>Évaluations:</h3>
-                @if (trouve)
+                else if (User.IsInRole("Client"))
                 {
-                    int cote = (int)evalClientActu.Cote;
-                    <div class="evaluation">
-                        <h6>
-                            (Vous) @client.AdresseEmail
-                            @for (int i = 0; i < cote; i++)
-                            {
-                                <img src="~/Logo/iconeEtoileJaune.png" width="15" height="15" />
-                            }
-                            @for (int i = cote; i < 5; i++)
-                            {
-                                <img src="~/Logo/iconeEtoile.png" width="15" height="15" />
-                            } :
-                        </h6>
-                        @if(evalClientActu.Commentaire != "" && evalClientActu.Commentaire != null)
-                        {
-                        <p>@evalClientActu.Commentaire</p>
-                        }
-                        else
-                        {
-                        <p style="color:gray">Aucune commentaire</p>
-                        }
-                    </div>
+                    <h5>Ajouter une évaluation</h5>
                 }
-                
-                @if (lstReview.Count > 0)
-                {
-                    @foreach (var review in User.IsInRole("Client") ? lstReview.Where(r => r.NoClient != client.NoClient && r.NoProduit == id): lstReview)
+                <div class="col">
+                    @if (User.IsInRole("Client"))
                     {
-                        var unClient = _context.PPClients.Where(c => c.NoClient == review.NoClient).FirstOrDefault();
-
-                        int cote = (int)review.Cote;
-
+                        <form asp-route-id="@id" id="eval" method="post">
+                            @for (int i = 0; i < numRating; i++)
+                            {
+                                <button type="submit" name="rating" value="@i" style="border: 0; background-color:transparent">
+                                    <img src="~/Logo/iconeEtoileJaune.png" width="25" height="25" />
+                                </button>
+                            }
+                            @for (int i = numRating; i < 5; i++)
+                            {
+                                <button type="submit" name="rating" value="@i" style="border: 0; background-color:transparent">
+                                    <img src="~/Logo/iconeEtoile.png" width="25" height="25" />
+                                </button>
+                            }
+                        </form>
+                        <br />
+                        <form asp-route-id="@id" asp-route-noClient="@client.NoClient" asp-route-eval="@trouve" asp-route-rating="@numRating" asp-action="Edit">
+                            @if (evalClientActu != null)
+                            {
+                                <textarea rows="4" cols="50" name="msg" placeholder="Modifier votre commentaire">@evalClientActu.Commentaire</textarea>
+                                <button class="btn btn-secondary" style="background-color:#7C6992; color:#F9E547" type="submit">Modifier votre évaluation</button>
+                            }
+                            else
+                            {
+                                <textarea rows="4" cols="50" name="msg" placeholder="Ajouter un commentaire"></textarea>
+                                <button class="btn btn-secondary" style="background-color:#7C6992; color:#F9E547" type="submit">Ajouter une évaluation</button>
+                            }
+                        </form>
+                    }
+                    <hr style="border-top: 3px solid gray" />
+                    <h3>Évaluations:</h3>
+                    @if (trouve)
+                    {
+                        int cote = (int)evalClientActu.Cote;
                         <div class="evaluation">
                             <h6>
-                                @unClient.AdresseEmail
+                                (Vous) @client.AdresseEmail
                                 @for (int i = 0; i < cote; i++)
                                 {
                                     <img src="~/Logo/iconeEtoileJaune.png" width="15" height="15" />
@@ -153,22 +125,63 @@ if (evalClientActu != null)
                                     <img src="~/Logo/iconeEtoile.png" width="15" height="15" />
                                 } :
                             </h6>
-                            @if (review.Commentaire != "" && review.Commentaire != null)
+                            @if (evalClientActu.Commentaire != "" && evalClientActu.Commentaire != null)
                             {
-                                <p>@review.Commentaire</p>
+                                <p>@evalClientActu.Commentaire</p>
                             }
                             else
                             {
-                                <p>Aucun commentaire</p>
+                                <p style="color:gray">Aucune commentaire</p>
                             }
                         </div>
                     }
-                }
-                else
-                {
-                    <h4>Aucune évaluations</h4>
-                }
+
+                    @if (lstReview.Count > 0)
+                    {
+                        @foreach (var review in User.IsInRole("Client") ? lstReview.Where(r => r.NoClient != client.NoClient && r.NoProduit == id) : lstReview)
+                        {
+                            var unClient = _context.PPClients.Where(c => c.NoClient == review.NoClient).FirstOrDefault();
+
+                            int cote = (int)review.Cote;
+
+                            <div class="evaluation">
+                                <h6>
+                                    @unClient.AdresseEmail
+                                    @for (int i = 0; i < cote; i++)
+                                    {
+                                        <img src="~/Logo/iconeEtoileJaune.png" width="15" height="15" />
+                                    }
+                                    @for (int i = cote; i < 5; i++)
+                                    {
+                                        <img src="~/Logo/iconeEtoile.png" width="15" height="15" />
+                                    } :
+                                </h6>
+                                @if (review.Commentaire != "" && review.Commentaire != null)
+                                {
+                                    <p>@review.Commentaire</p>
+                                }
+                                else
+                                {
+                                    <p>Aucun commentaire</p>
+                                }
+                            </div>
+                        }
+                    }
+                    else
+                    {
+                        <h4>Aucune évaluations</h4>
+                    }
+                </div>
             </div>
         </div>
-    </div>
+    }
+    else
+    {
+        <text>
+            <script>
+                debugger;
+                window.location.href = '/MainMenu/Catalogue';
+            </script>
+        </text>
+    }
 }
